Started score function and checking git email contributor:wq

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				</div>
 				<div class="col-xs-3 col-xs-offset-3 scoreboard aligncenter">
 					<h5>Score</h5>
-					<p>counter here…</p>
+					<p id="score-counter">counter here…</p>
 				</div>
 			</div>
 			<div class="row">
