added scoreboard functionality
checking the width and offset of both drop and paddle element,
scoreboard increments every time you catch a drop

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				</div>
 				<div class="col-xs-3 col-xs-offset-3 scoreboard aligncenter">
 					<h5>Score</h5>
-					<p id="score-counter">counter here…</p>
+					<p id="score-counter">0</p>
 				</div>
 			</div>
 			<div class="row">
@@ -69,12 +69,12 @@
 					<h2>Instructions</h2>
 					<p>Press the button to start the rain.  Use left/right keys to move the paddle and stop the drops reaching the ground</p>
 				</div>
-				
+
 			</div>
 		</div>
 	</div>
 
-	
+
 
 	<script src="js/scripts.js"></script>
 </body>
