created countdown timer

--- a/index.html
+++ b/index.html
@@ -13,12 +13,21 @@
 	<div id="wrap aligncenter">
 		<div class="container">
 			<div class="row">
-				<div class="col-xs-6 aligncenter">
+			  <div class="col-6 col-xs-offset-3">
+					HEJ
+			  </div>
+			</div>
+			<div class="row">
+				<div class="col-xs-4 scoreboard aligncenter">
+					<h5>Clock</h5>
+					<p id="clock-counter">60</p>
+				</div>
+				<div class="col-xs-4 aligncenter">
 					<button type="button" class="btn btn-default" onclick="rain()">Bring the rain!!!</button>
 				</div>
-				<div class="col-xs-3 col-xs-offset-3 scoreboard aligncenter">
+				<div class="col-xs-4 scoreboard aligncenter">
 					<h5>Score</h5>
-					<p id="score-counter">counter here…</p>
+					<p id="score-counter">0</p>
 				</div>
 			</div>
 			<div class="row">
@@ -69,12 +78,12 @@
 					<h2>Instructions</h2>
 					<p>Press the button to start the rain.  Use left/right keys to move the paddle and stop the drops reaching the ground</p>
 				</div>
-				
+
 			</div>
 		</div>
 	</div>
 
-	
+
 
 	<script src="js/scripts.js"></script>
 </body>
